Spacing corrected and responsive corrected

--- a/style.css
+++ b/style.css
@@ -161,8 +161,7 @@ body{
     padding: 1px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 900;
-    word-spacing: 10px;
-    letter-spacing: 2px;
+    word-spacing: 2px;
   }
   
 }
